<resources>
    <string name="app_name">Activitat 4.1</string>
    <string name="endevina_un_n_mero_del_1_al_3">Endevina un número del 1 al 3.</string>
    <string name="endevina">Endevina</string>
    <string name="numero_seleccionat">Numero seleccionat</string>
    <string name="has_fallat">Has fallat</string>
    <string name="l_has_endevinat">L\'has endevinat!</string>
    <string name="nom">Nom</string>
    <string name="benvingut">Benvingut!</string>
    <string name="data">13/10/2025</string>
    <string name="seguent">Seguent</string>
    <string name="com_et_dius">Com et dius?</string>
</resources>